--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Icy-Bear.github.io/TDC_2",
+  "homepage": "https://icy-bear.github.io/TDC_2/",
   "name": "wowow",
   "private": true,
   "version": "0.0.0",
